yoin.be support, #22

--- a/custom_components/youfone_be/translations/en.json
+++ b/custom_components/youfone_be/translations/en.json
@@ -1,9 +1,9 @@
 {
     "config": {
-        "title": "Youfone.be",
+        "title": "Yoin Youfone",
         "step": {
             "user": {
-                "description": "Setup a Youfone.be sensor, username and password are required.",
+                "description": "Setup Yoin Youfone sensor, username and password are required.",
                 "data": {
                     "username": "Username",
                     "password": "Password",
@@ -12,7 +12,7 @@
                 }
             },
             "edit": {
-                "description": "Setup a Youfone.be sensor, username and password are required.",
+                "description": "Setup Yoin Youfone sensor, username and password are required.",
                 "data": {
                     "username": "Username",
                     "password": "Password",
@@ -32,7 +32,7 @@
     "options": {
         "step": {
             "edit": {
-                "description": "Setup a Youfone.be sensor, username and password are required.",
+                "description": "Setup Yoin Youfone sensor, username and password are required.",
                 "data": {
                     "username": "Username",
                     "password": "Password",
